Add login in and login out
Add login in and login out

--- a/css/index.css
+++ b/css/index.css
@@ -22,6 +22,9 @@ a#btn-parent {
     margin: 0 1rem 0 2rem;
 }
 
-* {
-    
+.nav-account > span {
+    position: relative;
+    display: block;
+    width: 100%;
+    text-align: center;
 }
